# bopep

./: .gitignore  LICENSE  README.md  bopep.ipynb  example.ipynb  pyproject.toml  pytest.ini  requirements.txt  run.py  setup.py  test_mutator.py  test_refactored_bopep.py  transfer_to_processed.py
.github/workflows/: ci.yml
bopep/: README.md  __init__.py  run.py
bopep/analysis/: README.md  analyzer.py
bopep/bayes/: __init__.py  acquisition.py
bopep/config/: config.py  (+4 more)
data/: 4glf.cif  5CR6.cif  README.md  peptide_samples.csv  test_data.csv
examples/: boga.py  boga_dummy.py  boga_results.txt  borf.py  combined_hyperparameter_tuning_example.py  design_example.py  distance_to_binding_site.py  dummy_optimize.py  embeddings.py  generate_dummy_logs.py  genetic_algorithm.py  hparam_optimizer_example.py  monomer_scoring_example.py  mpnn_fastrelax_example.py  multi_model_docking_example.py  multi_model_example.py  multi_model_surrogate_example.py  mutation_path_analysis.py  peptidome_search.py  proteome_search.py  proteome_search_example.py  rfdiffusion_example.py  simple_multiobjective_demo.py  surrogate_models.py  synthesizer_example.py  test_embedding.py  test_surrogate_model.py  uncertainty_tuning_example.py  uncertainty_visualization.py
src/: logging_utils.py  run.py
test_output_checkpointing/: hyperparameters.csv  model_losses.csv  scores.csv
tests/: conftest.py  test_acquisition.py  test_bayesian_optimization.py  test_design.py  test_diffusion.py  test_docking.py  test_embedding.py  test_embeddings.py  test_folding.py  test_genetic_algorithm.py  test_hyperparameter_tuner.py  test_monomer_scoring.py  test_multi_objective_surrogate.py  test_optimize.py  test_scorer.py  test_scoring.py  test_search.py  test_single_objective_surrogate.py  test_structure_parser.py  test_surrogate_model.py  test_surrogate_models.py
(+148 files in other folders)
