[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bopep"
version = "0.0.1"
authors = [
    { name = "Erik Hartman", email = "erik.hartman@hotmail.com" },
]
description = "A Python package for bopep"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]