[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bopep"
version = "0.0.1"
authors = [
    { name = "Erik Hartman", email = "erik.hartman@hotmail.com" },
]
description = "Mining for peptide binders in large datasets"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]