[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bopep"
version = "0.0.1"
authors = [
    { name = "Erik Hartman", email = "erik.hartman@hotmail.com" },
]
description = "Mining for peptide binders in large datasets"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
pyrosetta = [
    "pyrosetta @ https://west.rosettacommons.org/pyrosetta/release/release/PyRosetta4.Release.python313.ubuntu.wheel/pyrosetta-2025.25+release.a0cefad01b-cp313-cp313-linux_x86_64.whl#sha256=0ec84ac865336ca3266eb8a6e8b1c5908dbce661db21f173bbed36007e3f8408",
    "pyrosetta-installer==0.1.2"
]